# obyte-cpp

./: .directory  CMakeLists.txt  LICENSE  README.md
src/: .directory  byteduino.cpp  byteduino.hpp  communication.cpp  communication.hpp  cosigning.cpp  cosigning.hpp  definitions.hpp  hashing.cpp  hashing.hpp  hub_challenge.cpp  hub_challenge.hpp  key_rotation.cpp  key_rotation.hpp  main.cpp  messenger.cpp  messenger.hpp  pairing.cpp  pairing.hpp  payment.cpp  payment.hpp  random_gen.cpp  random_gen.hpp  signature.cpp  signature.hpp  structures.hpp  wallet.cpp  wallet.hpp
src/lib/: .directory  AES.hpp  AES128.cpp  AESCommon.cpp  AESEsp32.cpp  AuthenticatedCipher.cpp  AuthenticatedCipher.hpp  Base64.cpp  Base64.hpp  BlockCipher.cpp  BlockCipher.hpp  Cipher.cpp  Cipher.hpp  Crypto.cpp  Crypto.hpp  GCM.cpp  GCM.hpp  GF128.cpp  GF128.hpp  GHASH.cpp  GHASH.hpp  Hash2.cpp  Hash2.hpp  SHA256.cpp  SHA256.hpp  byte_order.c  byte_order.h  ripemd-160.h  root_certificates.hpp  websocketclient.cpp  websocketclient.hpp
src/lib/micro-ecc/: .directory
src/lib/utility/: .directory  LimbUtil.hpp
stubs/esp32/: CMakeLists.txt
stubs/esp_common/: CMakeLists.txt
stubs/esp_rom/: CMakeLists.txt
stubs/freertos/: CMakeLists.txt
stubs/heap/: CMakeLists.txt
stubs/log/: CMakeLists.txt
stubs/newlib/: CMakeLists.txt
stubs/soc/: CMakeLists.txt
stubs/spi_flash/: sdkconfig.h
stubs/xtensa/: CMakeLists.txt
